[tool.poetry]
name = "whatsapp-forensic-exporter"
version = "1.2.0"
description = "A command-line forensic tool for exporting WhatsApp data"
authors = ["Francesco de Lorenzi <francesco@delorenzi.me>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.1.0"
reportlab = ">=4.0.0"
tabulate = ">=0.9.0"
numpy = ">=1.26.0"
Pillow = ">=10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
